New way of handling awaymode
Changed handling of awaymode to a condition. also added a action to disable awamode. this is needed if unlocked from homey due to a bug in the lock.

--- a/app.json
+++ b/app.json
@@ -70,6 +70,22 @@
           }
         ]
       }
+    ],
+    "conditions": [
+      {
+        "id": "awaymode_check",
+        "title": {
+          "en": "If awaymode is active."
+        }
+      }
+    ],
+    "actions": [
+      {
+        "id": "awaymode_disable",
+        "title": {
+          "en": "Disable awaymode."
+        }
+      }
     ]
   },
   "drivers": [
